# animedb

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  REFERENCE.md  REFERENCE_METADATA.md  docker-compose.yml  extract.py  go.mod  go.sum  patch_anilist.py  patch_cleanup.py  rustquty.toml  test_isolated.rs
.github/workflows/: docker.yml
cmd/anilist/: main.go
cmd/api/: main.go  main_test.go
cmd/myanimelist/: main.go
cmd/scan/: main.go
cmd/test-ingest/: main.go
cmd/videos/: main.go
crates/animedb/: CHANGELOG.md  Cargo.toml
crates/animedb-api/: CHANGELOG.md  Cargo.toml
crates/animedb-api/src/: lib.rs  main.rs
crates/animedb/examples/: e2e_test_runner.rs  real_pipeline.rs
crates/animedb/src/: catalog.rs  db.rs  db_test_mini.rs  error.rs  lib.rs  merge.rs  model.rs  provider.rs  remote.rs  schema.rs
crates/animedb/src/provider/: anilist.rs  http.rs  imdb.rs  jikan.rs  kitsu.rs  mod.rs  registry.rs  tvmaze.rs
crates/animedb/src/repository/: common.rs  episodes.rs  media.rs  mod.rs  search.rs  sync_state.rs
crates/animedb/src/sync/: mod.rs  service.rs
docs/: anilist.md  imdb.md  jikan.md  kitsu.md  tvmaze.md
internal/cache/: lru.go  lru_test.go
internal/http/handlers/: anilist.go  anilist_test.go  myanimelist.go  search_realtime.go  video.go
internal/http/response/: response.go
internal/indexer/: episode_updater.go  video_indexer.go
internal/ingest/anilist/: client.go  models.go  persister.go
internal/ingest/myanimelist/: client.go  models.go  persister.go
internal/middleware/: cors.go  ratelimit.go  validation.go
internal/model/: anilist.go  myanimelist.go  search.go  video.go
internal/postgres/: postgres.go
internal/ratelimit/: ratelimit.go
internal/repository/: anilist.go  anilist_repository.go  myanimelist.go  myanimelist_repository.go  query_builder.go  scanner.go  video.go  video_repository.go
internal/scanner/: video_scanner.go
internal/service/: anilist_search.go  anilist_search_test.go  bm25_search.go  bm25_search_test.go  myanimelist_search.go  myanimelist_search_test.go  transcode_service.go  video_search.go
internal/util/: data.go  http.go  season.go  sort.go
internal/video/: corruption.go  filename_parser.go  hardware.go  hash.go  metadata.go  stream.go  thumbnail.go  transcode.go
internal/watcher/: file_watcher.go
quality/: baseline.json  metricsSummary.json  qualityReport.json
scripts/: benchmark.sh  docker-seed.sh  e2e_test.sh  test-real-pipeline.sh
