[workspace]
members = ["crates/animedb", "crates/animedb-api"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.4"
authors = ["animedb contributors"]
repository = "https://github.com/enrell/animedb"

[workspace.dependencies]
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
