[workspace]
members = ["crates/animedb", "crates/animedb-api"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.3.5"
authors = ["animedb contributors"]
repository = "https://github.com/enrell/animedb"
homepage = "https://github.com/enrell/animedb"
documentation = "https://docs.rs/animedb"
keywords = ["anime", "manga", "metadata", "media", "database"]
categories = ["database", "api-bindings", "multimedia"]

[workspace.dependencies]
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
reqwest = { version = "0.13.3", default-features = false, features = [
  "blocking",
  "json",
  "rustls",
  "query",
] }
rusqlite = { version = "0.39", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
