[package]
name = "animedb-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GraphQL API for the animedb Rust metadata catalog"
readme = "../../README.md"

[dependencies]
animedb = { version = "0.1.0", path = "../animedb" }
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
