[package]
name = "animedb-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GraphQL API for the animedb Rust metadata catalog"
readme = "../../README.md"

[dependencies]
animedb = { version = "0.2.2", path = "../animedb", features = ["local-db"] }
async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
