[package]
name = "animedb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local-first anime and manga metadata catalog for Rust media servers"
readme = "../../README.md"

[dependencies]
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
