[package]
name = "animedb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local-first anime and manga metadata catalog for Rust media servers"
readme = "../../README.md"
exclude = ["target/", ".git/", ".github/"]

[features]
default = ["local-db", "remote"]
# Enables local SQLite database storage (requires rusqlite)
local-db = ["dep:rusqlite"]
# Enables remote provider clients and data normalization
remote = []

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
flate2 = "1"
rusqlite = { version = "0.31.0", optional = true, features = ["bundled", "serde_json"] }

[dev-dependencies]
tokio.workspace = true
# NOTE: When using animedb with only `remote` feature (no `local-db`), rusqlite
# is not pulled in. Psyche and other crates can depend on animedb with
# `default-features = false, features = ["remote"]` to avoid the SQLite binding
# conflict with sqlx-based projects.
